k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sherpa-frontend
spec:
  selector:
    app: sherpa-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
