k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sherpa-web
spec:
  selector:
    app: sherpa-web
  ports:
    - name: http
      port: 8001
      targetPort: 8001
