k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherpa
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: sherpa.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sherpa-frontend
                port:
                  number: 3000
    - host: sherpa.zuens2020.work
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: sherpa-web
                port:
                  number: 8001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sherpa-frontend
                port:
                  number: 3000
